--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,7 @@ input[type=password]{
     background-color: rgb(230, 226, 226);
     border: 0;
     padding: 10px;
+    outline: 0;
 }
 input[type=submit]{
     width: 100% ;
